examples/should-fail/case-bad-glob/pages/index.nono
const stuff = glob("a/*/b/*.md")
component X { div { "{stuff}" } }
